--- a/app/src/main/res/layout/activity_eat_place_detail.xml
+++ b/app/src/main/res/layout/activity_eat_place_detail.xml
@@ -1,5 +1,4 @@
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,14 +11,14 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@android:color/white"
-        app:navigationIcon="@drawable/ic_arrow_back"
-        app:titleTextColor="@android:color/black"
-        android:fitsSystemWindows="true"
         android:elevation="4dp"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        app:layout_constraintTop_toTopOf="parent"
+        android:fitsSystemWindows="true"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:navigationIcon="@drawable/ic_arrow_back"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:titleTextColor="@android:color/black">
 
         <!-- Кастомный TextView для заголовка по центру -->
         <TextView
@@ -27,9 +26,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:textSize="20sp"
             android:textColor="@android:color/black"
-            android:textStyle="bold"/>
+            android:textSize="20sp"
+            android:textStyle="bold" />
     </androidx.appcompat.widget.Toolbar>
 
     <!-- ViewPager2 для фото с индикатором TabLayout -->
@@ -37,40 +36,49 @@
         android:id="@+id/photo_view_pager"
         android:layout_width="match_parent"
         android:layout_height="250dp"
-        app:layout_constraintTop_toBottomOf="@id/toolbar_places_to_eat_detail"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/toolbar_places_to_eat_detail" />
 
     <!-- TabLayout для отображения индикатора страницы под фото -->
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/photo_indicator"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        app:tabIndicatorColor="@color/blue"
+        android:layout_height="12dp"
+        android:layout_marginTop="12dp"
         android:background="@color/white"
-        app:tabBackground="@drawable/custom_tab_indicator"
-        app:tabRippleColor="@null"
-        app:tabIconTint="@color/gray"
-        android:elevation="4dp"
-        app:layout_constraintTop_toBottomOf="@id/photo_view_pager"
+        android:elevation="0dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/photo_view_pager"
+        app:tabBackground="@drawable/custom_tab_indicator"
+        app:tabContentStart="0dp"
+        android:layout_marginHorizontal="2dp"
+        app:tabGravity="center"
+        app:tabIconTint="@color/gray"
+        app:tabIndicator="@null"
+        app:tabIndicatorFullWidth="false"
+        app:tabMaxWidth="10dp"
+        app:tabMinWidth="10dp"
+        app:tabMode="fixed"
+        app:tabPadding="4dp"
+        app:tabRippleColor="@null"
+        app:tabSelectedTextColor="@color/blue" />
 
     <!-- NestedScrollView для прокрутки контента -->
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/photo_indicator"
         app:layout_constraintBottom_toTopOf="@id/bottom_navigation_view"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/photo_indicator">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:gravity="center_vertical"
+            android:orientation="vertical"
             android:padding="16dp">
 
             <!-- Описание заведения -->
@@ -79,17 +87,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:textSize="16sp"
-                android:textColor="@android:color/black" />
+                android:textColor="@android:color/black"
+                android:textSize="16sp" />
 
             <!-- Плитка с информацией о месте с закругленными краями и серым фоном -->
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
+                android:backgroundTint="@color/lightGray"
                 app:cardCornerRadius="16dp"
-                app:cardElevation="4dp"
-                android:backgroundTint="@color/lightGray">
+                app:cardElevation="4dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -101,44 +109,43 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Информация о месте"
-                        android:textStyle="bold"
+                        android:textColor="@android:color/black"
                         android:textSize="18sp"
-                        android:textColor="@android:color/black" />
+                        android:textStyle="bold" />
 
                     <!-- Координаты с иконкой -->
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:layout_marginTop="8dp">
+                        android:layout_marginTop="8dp"
+                        android:orientation="horizontal">
 
                         <ImageView
                             android:layout_width="24dp"
                             android:layout_height="24dp"
-                            android:src="@drawable/location"
-                            android:layout_marginEnd="8dp" />
+                            android:layout_marginEnd="8dp"
+                            android:src="@drawable/location" />
 
                         <TextView
                             android:id="@+id/place_coordinates"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textColor="@android:color/holo_blue_dark"
                             android:clickable="true"
-                            />
+                            android:textColor="@android:color/holo_blue_dark" />
                     </LinearLayout>
 
                     <!-- Адрес с иконкой -->
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:layout_marginTop="8dp">
+                        android:layout_marginTop="8dp"
+                        android:orientation="horizontal">
 
                         <ImageView
                             android:layout_width="24dp"
                             android:layout_height="24dp"
-                            android:src="@drawable/content"
-                            android:layout_marginEnd="8dp" />
+                            android:layout_marginEnd="8dp"
+                            android:src="@drawable/content" />
 
                         <TextView
                             android:id="@+id/place_address"
@@ -151,14 +158,14 @@
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:layout_marginTop="8dp">
+                        android:layout_marginTop="8dp"
+                        android:orientation="horizontal">
 
                         <ImageView
                             android:layout_width="24dp"
                             android:layout_height="24dp"
-                            android:src="@drawable/call"
-                            android:layout_marginEnd="8dp" />
+                            android:layout_marginEnd="8dp"
+                            android:src="@drawable/call" />
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -169,22 +176,21 @@
                             android:id="@+id/place_phone"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textColor="@android:color/holo_blue_dark"
-                            />
+                            android:textColor="@android:color/holo_blue_dark" />
                     </LinearLayout>
 
                     <!-- Часы работы с иконкой -->
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:layout_marginTop="8dp">
+                        android:layout_marginTop="8dp"
+                        android:orientation="horizontal">
 
                         <ImageView
                             android:layout_width="24dp"
                             android:layout_height="24dp"
-                            android:src="@drawable/schedule"
-                            android:layout_marginEnd="8dp" />
+                            android:layout_marginEnd="8dp"
+                            android:src="@drawable/schedule" />
 
                         <TextView
                             android:id="@+id/place_hours"
@@ -209,13 +215,13 @@
         android:id="@+id/bottom_navigation_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:menu="@menu/bottom_nav_menu"
-        app:itemIconSize="24dp"
         android:background="@android:color/white"
+        app:itemIconSize="24dp"
         app:itemIconTint="@color/gray"
         app:itemTextColor="@color/gray"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:menu="@menu/bottom_nav_menu" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
