--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -114,8 +114,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Контакты: Ilya.cherhyaev31@yandex.ru"
-        android:textColor="@android:color/black"
+        android:text="Ilya.cherhyaev31@yandex.ru"
+        android:textColor="@android:color/holo_blue_dark"
         android:textSize="16sp"
         app:layout_constraintTop_toBottomOf="@id/developer_info"
         app:layout_constraintStart_toStartOf="parent"
