--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -79,13 +79,16 @@
         android:layout_marginTop="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:text="Это приложение для отображения мест и событий в Ставрополе."
+        android:text="Ставротека — твой гид по Ставропольскому краю!
+
+Ставротека — это удобное и полезное приложение для жителей и гостей Ставропольского края. Узнайте о лучших местах города, интересных событиях и достопримечательностях. Ставротека поможет вам открыть город с новой стороны и не пропустить ничего важного."
         android:textColor="@android:color/black"
         android:textSize="16sp"
         android:gravity="center"
         app:layout_constraintTop_toBottomOf="@id/app_version"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:ignore="HardcodedText" />
 
     <!-- Разделитель -->
     <View
